--- a/playerinf.html
+++ b/playerinf.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="bridge.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Arena</title>
@@ -8,6 +9,7 @@
     
 </head>
 <body class="bdy">
+    
     <div class="player-header">
     <h1 class="htitle">Player <span id="x">1</span></h1>
 </div>
@@ -108,5 +110,6 @@ window.onload = function() {
     }
 };
 </script>
+
 </body>
 </html>
