--- a/settings.html
+++ b/settings.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <script src="bridge.js"></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Battle Arena </title>
@@ -10,6 +11,7 @@
     </head>
 
   <body class="bdy">
+    
   <h1 class="htitle">Settings</h1>
   <div class="guidelines">
     <h3>Sound Effects</h3>
@@ -29,6 +31,7 @@
           document.querySelector(`input[value="${current}"]`).checked = true;
       };
   </script>
+ 
 </body>
 
 </html>
