--- a/playerinf.html
+++ b/playerinf.html
@@ -18,12 +18,13 @@
     <h3 id='xx3' style="color: aliceblue; text-shadow:0 0 20px red; margin-left:2% ;" class="remhp">Remaining health:xx hp</h3>
     <h3 id='xx4' style="color: aliceblue; text-shadow:0 0 20px red; margin-left:2% ;" class="remhp">Remaining health:xx hp</h3>
     <h2 style="color: aliceblue; text-align: center;">Choose your move..</h2>
-    <div style="min-height: 100px; display: flex; gap:10%; justify-content: center; align-items:center;">
+    <div style="width: 100%; display: flex; gap: 5%; justify-content: center; align-items: center; flex-wrap: wrap;">
     
+
     <div>
         <button onclick="attack()"> 
             <div class="options">   
-                <img src="https://i.ibb.co/KjYp5x6C/1000264303.jpg" alt="Attack">
+                <img src="attack.jpeg" alt="Attack">
                 <div class="overlay"><p>ATTACK</p></div>
             </div>
         </button>
@@ -33,7 +34,7 @@
     <div>
         <button id="ha-btn" onclick="hattack()">
             <div class="options">
-                <img src="https://i.ibb.co/vvszLb0c/1000264300.jpg" alt="Heavy Attack">
+                <img src="highattack.jpeg" alt="Heavy Attack">
                 <div class="overlay"><p>HEAVY</p></div>
             </div>
         </button>
@@ -43,7 +44,7 @@
     <div>
         <button id="def-btn" onclick="defend()">
             <div class="options">
-                <img src="https://i.ibb.co/FLfJhpsJ/1000264306.jpg" alt="Defend">
+                <img src="defend.jpeg" alt="Defend">
                 <div class="overlay"><p>DEFEND</p></div>
             </div>
         </button>
